--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 body {
   font-family: 'Noto Sans', sans-serif;
-  scroll-behavior: smooth;
+  scroll-behavior: smooth !important;
   background: #404040;
 }
 
