--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 @import url(https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700&display=swap);
+html{
 
+  scroll-behavior: smooth !important;
+}
 body {
   font-family: 'Noto Sans', sans-serif;
-  scroll-behavior: smooth !important;
   background: #404040;
 }
 
