--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ body {
   width: 100%;
   padding: 0 128px;
 }
+img{
+  width: 100%;
+  height: 100%;
+}
 @media screen and (max-width:1024px) {
   .container{
     padding: 0 64px;
